# NKHook6-API

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-api.yml  main.yml
NKHook6-API/: BTDModStart.cs  CMakeLists.txt  CommandManager.cs  Extensions.cs  Game.cs  NKHook6-API.csproj  NKHook6-API.sln  Registry.cs
NKHook6-API/Bloons/: Bloon.cs  CMakeLists.txt  IBloon.cs  IBloonEntity.cs
NKHook6-API/Events/: CMakeLists.txt  Event.cs  EventAttribute.cs  EventBase.cs  EventBaseCancellable.cs  EventHeaderAttribute.cs  EventInfoAttribute.cs  EventRegistry.cs  KeyEvent.cs  UnknownEventException.cs  UpdateEvent.cs
NKHook6-API/Events/Bloons/: BloonEvent.cs  CMakeLists.txt  CreatedEvent.cs  DamagedEvent.cs  DeletedEvent.cs  LeakedEvent.cs  MoveEvent.cs  RotateEvent.cs
NKHook6-API/Events/Game/: CMakeLists.txt  DefeatedEvent.cs  RoundEndEvent.cs  RoundStartEvent.cs  StartMatchEvent.cs  VictoryEvent.cs
NKHook6-API/Events/Player/: CMakeLists.txt  CashChangedEvent.cs  CashGainedEvent.cs  CashLostEvent.cs  HealthChangedEvent.cs  HealthGainedEvent.cs  HealthLostEvent.cs
NKHook6-API/Events/Projectile/: CMakeLists.txt  CreatedEvent.cs  DeletedEvent.cs
NKHook6-API/Events/Towers/: CMakeLists.txt  CreatedEvent.cs  DeletedEvent.cs  DeselectedEvent.cs  SelectedEvent.cs  SoldEvent.cs  UpgradeEvent.cs
NKHook6-API/Events/Weapons/: CreatedEvent.cs  DeletedEvent.cs
NKHook6-API/Game/: CMakeLists.txt  IGame.cs  IGameInstance.cs  IPlayer.cs
NKHook6-API/Map/: Area.cs  CMakeLists.txt  IMap.cs  Path.cs  Point.cs  Polygon.cs
NKHook6-API/Properties/: AssemblyInfo.cs  CMakeLists.txt
NKHook6-API/Registry/: BloonRegistry.cs  CMakeLists.txt  EventRegistry.cs  MapRegistry.cs  Registry.cs  TowerRegistry.cs
(+17 files in other folders)
